# 3dbpp

./: .gitignore  README.md  placement.json  pyproject.toml
.github/: copilot-instructions.md
src/: config.py  engine.py  ga.py  generator.py  main.py  models.py  visualization.py
tests/: test_engine.py
